Added new packages

--- a/src/Core/BlazorChat.Core.Application/BlazorChat.Core.Application.csproj
+++ b/src/Core/BlazorChat.Core.Application/BlazorChat.Core.Application.csproj
@@ -6,4 +6,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.2.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BlazorChat.Core.Domain\BlazorChat.Core.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
