--- a/src/Core/BlazorChat.Core.Infrastructure/BlazorChat.Core.Infrastructure.csproj
+++ b/src/Core/BlazorChat.Core.Infrastructure/BlazorChat.Core.Infrastructure.csproj
@@ -7,12 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BlazorChat.Core.Application\BlazorChat.Core.Application.csproj" />
     <ProjectReference Include="..\BlazorChat.Core.Domain\BlazorChat.Core.Domain.csproj" />
   </ItemGroup>
 
